Calling two microservices together, do it hardcoded, i.e., manually

--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -55,6 +55,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.lcwd.hotel</groupId>
+			<artifactId>HotelService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
