Using feign client instead of RestTemplate

--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -56,9 +56,8 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.lcwd.hotel</groupId>
-			<artifactId>HotelService</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 	</dependencies>
 	
