--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   application:
-    name: HOTEL-SERVICE
+    name: HOTELSERVICE
 eureka:
   instance:
     prefer-ip-address: true
