Solved issue of API Gateway Module

--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   application:
-    name: HOTELSERVICE
+    name: HOTEL-SERVICE
 eureka:
   instance:
     prefer-ip-address: true
