--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -3,20 +3,20 @@ server:
 
 spring:
   application:
-    name: APIGATEWAY
+    name: API-GATEWAY
   cloud:
     gateway:
       routes:
-        - id: USERSERVICE
-          uri: lb://USERSERVICE
+        - id: USER-SERVICE
+          uri: lb://USER-SERVICE
           predicates:
             - Path=/users/**
-        - id: HOTELSERVICE
-          uri: lb://HOTELSERVICE
+        - id: HOTEL-SERVICE
+          uri: lb://HOTEL-SERVICE
           predicates:
             - Path=/hotels/**
-        - id: RATINGSERVICE
-          uri: lb://RATINGSERVICE
+        - id: RATING-SERVICE
+          uri: lb://RATING-SERVICE
           predicates:
             - Path=/ratings/**
 
