--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -13,11 +13,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
   application:
     name: USER-SERVICE
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  config:
+    import: configserver:http://localhost:8085
+#  profiles:
+#    active: dev
