--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   application:
     name: HOTEL-SERVICE
   config:
-    import: configserver:http://localhost:8085
+    import: optional:configserver:http://localhost:8085
 #eureka:
 #  instance:
 #    prefer-ip-address: true
