--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: RATING-SERVICE
   config:
-    import: configserver:http://localhost:8085
+    import: optional:configserver:http://localhost:8085
 #eureka:
 #  instance:
 #    prefer-ip-address: true
