--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -27,3 +27,7 @@ spring:
 #    register-with-eureka: true
 #    service-url:
 #      defaultZone: http://localhost:8761/eureka
+okta:
+  oauth2:
+    issuer: https://integrator-6076774.okta.com/oauth2/default
+    audience: api://default
