--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
 #      defaultZone: http://localhost:8761/eureka
 server:
   port: 8083
+okta:
+  oauth2:
+    issuer: https://integrator-6076774.okta.com/oauth2/default
+    audience: api://default
