--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -15,6 +15,22 @@ spring:
     name: USER-SERVICE
   config:
     import: optional:configserver:http://localhost:8085
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://integrator-6076774.okta.com/oauth2/default
+      client:
+        registration:
+          my-internal-client:
+            provider: okta
+            authorization-grant-type: client_credentials
+            scope: internal
+            client-id: 0oauco0lvkrStvupE697
+            client-secret: 2XRhTGluhsitesZXBo9o4SI_YSq1m9SRhHLgd5sfRmYQ_aejbRUE6yGhPX-sU1mQ
+        provider: 
+          okta:
+            issuer-uri: https://integrator-6076774.okta.com/oauth2/default
 #  profiles:
 #    active: dev
 management:
@@ -52,3 +68,7 @@ resilience4j:
         limit-refresh-period: 4s
         limit-for-period: 2
         timeout-duration: 2s
+okta:
+  oauth2:
+    issuer: https://integrator-6076774.okta.com/oauth2/default
+    audience: api://default
